k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex
  labels:
    name: cortex
    environment: production
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: namespace
