k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex
  namespace: cortex
  labels:
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: dashboard
      port: 3001
      targetPort: dashboard
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800

---
apiVersion: v1
kind: Service
metadata:
  name: cortex-dashboard
  namespace: cortex
  labels:
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: dashboard
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: application
  ports:
    - name: dashboard
      port: 3001
      targetPort: dashboard
      nodePort: 30001
      protocol: TCP
